--- a/crisis-line-web/public/index.html
+++ b/crisis-line-web/public/index.html
@@ -2,14 +2,14 @@
 <html lang="pt-PT">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo512.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Linha de Crise - Plataforma de Gestão"
+      content="SOS Estudante - Plataforma de Gestão"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo512.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Linha de Crise</title>
+    <title>SOS Estudante</title>
   </head>
   <body>
     <noscript>É necessário ativar o JavaScript para executar esta aplicação.</noscript>
